Added examples in vignettes and fixed a few bugs
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@127 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/vignettes/empir.bib
+++ b/pkg/gmm4/vignettes/empir.bib
@@ -505,6 +505,13 @@ title = {Empirical Likelihood},
 year = {2001},
 }
 
+@Book{klein50,
+author = {Klein, L.},
+publisher = {New York: John Wiley and Sons},
+title = {Economic Fluctuations in the United-States 1921-1941},
+year = {1950},
+}
+
 @article{carrasco-chernov-florens-ghysels07,
 NUMBER={140},
 AUTHOR = {Carrasco, M. and Chernov, M. and Florens, J. P. and Ghysels, E.},
